--- a/tutorials/tutorial1/tutorial1_linearRegression.Rmd
+++ b/tutorials/tutorial1/tutorial1_linearRegression.Rmd
@@ -11,8 +11,6 @@ output:
     number_sections: false
     css: [../css/index_custom.css, ../css/tutorial_custom.css]
     code_folding: show
-    includes:
-       in_header: ../../wd/misc/clicky.html
 editor_options: 
   markdown: 
     wrap: 72
@@ -27,6 +25,7 @@ htmltools::img(src = knitr::image_uri("../../assets/pic/320px-UNFPA_logo.svg.png
 ```{r, echo=F, fig.show="hold", out.width="20%"}
 knitr::include_graphics('../../assets/pic/wp_logotype_grey_hi.png')
 knitr::include_graphics('../../assets/pic/USH0149_LOGO-2021_RGB_Neutral_Punched-AW.svg')
+knitr::include_graphics('../../assets/pic/Ox_LCDS_logo_bw.png')
 ```
 ```{r, include=F}
 # 1 Set-up ----
