include es version in main repo

--- a/index.Rmd
+++ b/index.Rmd
@@ -11,13 +11,13 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Statistical population modelling is a powerful tool for producing gridded population estimates to support census activities. [WorldPop](https://www.worldpop.org/) at the University of Southampton is a global leader in developing these methods and has partnered with the [United Nations Population Fund (UNFPA)](https://www.unfpa.org/) to provide support to national statistics offices in training and production of high-resolution gridded population estimates from existing data sources (e.g. household surveys, building footprints, administrative records, census projections).
+Statistical population modelling is a powerful tool for producing gridded population estimates to support census activities. [WorldPop](https://www.worldpop.org/) at the University of Southampton and the [Leverhulme Centre for Demographic Science](https://www.demography.ox.ac.uk/) at the University of Oxford are global leaders in developing these methods and have partnered with the [United Nations Population Fund (UNFPA)](https://www.unfpa.org/) to provide support to national statistics offices in training and production of high-resolution gridded population estimates from existing data sources (e.g. household surveys, building footprints, administrative records, census projections).
 
 This website provides a series of tutorials in **Bayesian statistics for population modelling** and hands-on experience to start developing the necessary skills. It includes example code and other resources designed to expedite the learning curve as much as possible.
 
 The key concepts that are covered in the tutorial series include:
 
-1.  Introduction to software for Bayesian statistical modelling:  R and Stan,
+1.  Introduction to software for Bayesian statistical modelling: R and Stan,
 
 2.  Simple linear regression in a Bayesian context,
 
@@ -27,7 +27,7 @@ The key concepts that are covered in the tutorial series include:
 
 5.  Diagnostics to evaluate model performance (e.g. cross-validation).
 
-The material has been used during a remote workshop with the Brazilian Stats Office, Instituto Brasileiro de Geografia e Estatística (IBGE), in October 2021.
+The material has been used during an in-person workshop hosted by the Colombian National Administrative Department of Statistics in Bogota, Colombia in March 2023 and a remote workshop with the Brazilian Stats Office, Instituto Brasileiro de Geografia e Estatística (IBGE), in October 2021.
 
 ## Material
 
@@ -45,15 +45,15 @@ The raw code of the website and tutorials, including the R code can be found [he
 
 # Acknowledgements
 
-This tutorial was written by Edith Darin from WorldPop, University of Southampton and Douglas Leasure from Leverhulme Centre for Demographic Science, University of Oxford, with supervision from Andrew Tatem, WorldPop, University of Southampton. Funding for the work was provided by the United Nations Population Fund (UNFPA).
+This tutorial was written by Edith Darin from WorldPop, University of Southampton and Douglas Leasure from Leverhulme Centre for Demographic Science, University of Oxford, with supervision from Andrew Tatem, WorldPop, University of Southampton. Funding for the work was provided by the United Nations Population Fund (UNFPA), the Leverhulme Trust (RC-2018-003) and ESRC Impact Acceleration Account at the University of Oxford (2209-KEA-835).
 
 # License
 
-You are free to redistribute this document under the terms of a Creative Commons Attribution-NoDerivatives 4.0 International ([CC BY-ND 4.0](https://creativecommons.org/licenses/by-nd/4.0/)) license.
+You are free to redistribute this document under the terms of a Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) license.
 
 # Suggested citation
 
-Darin E, Leasure DR, Tatem AJ. 2021. Statistical population modelling for census support. United Nations Population Fund (UNFPA) and WorldPop, University of Southampton. <https://wpgp.github.io/bottom-up-tutorial/>, <doi:10.5281/zenodo.5572490>
+Darin E, Leasure DR, Tatem AJ. 2023. Statistical population modelling for census support. United Nations Population Fund (UNFPA), Leverhulme Centre for Demographic Science, University of Oxford, and WorldPop, University of Southampton. <https://wpgp.github.io/bottom-up-tutorial/>, <doi:10.5281/zenodo.5572490>
 
 <br>
 
